--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "crud application",
   "main": "index.js",
   "scripts": {
-    "dev": "npx nodemon index.js"
+    "start": "node index.js"
   },
   "author": "lucifer",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.5",
+    "netlify-lambda": "^2.0.12",
     "nodemon": "^2.0.12"
   }
 }
